Fix minor layout issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,7 @@
 .content_padding {
     padding: 2rem 1rem;
 }
+
+.content_gray {
+    background-color: #EEEEEE;
+}
